--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>hello world</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Hello World</title>
+</head>
+<body>
+    <h1>Hello, World! Welcome to DevSecOps 🚀</h1>
+</body>
+</html>
